[package]
name = "seven-time"
version = "0.1.0"
authors = ["chinifabio <fabiochini99@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "seven-time"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
anyhow = "1.0.95"
embedded-svc = "0.28.1"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
log = "0.4.25"
shtcx = "1.0.0"
toml-cfg = "0.2.0"

[build-dependencies]
embuild = "0.33"
